# pneumonia-vit-classifier

./: .gitignore  README.md  pyproject.toml
notebooks/: 1-creating_dataset.ipynb  2-train_model.ipynb  3-upload_model_to_hugging_face.ipynb  4-create_gradio_app.ipynb
src/: app.py
src/models/: predict.py
src/visualization/: image_processing.py
