[tool.poetry]
name = "pneumonia-xray"
version = "1.1"
description = ""
authors = ["Marlon Menendez <marlon.menendezg@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
tensorflow-macos = "^2.15.0"
tensorflow-metal = "^1.1.0"
flake8 = "^6.1.0"
black = "^23.11.0"
matplotlib = "^3.8.2"
pandas = "^2.1.3"
polars = "^0.19.17"
seaborn = "^0.13.0"
transformers = "^4.35.2"
datasets = "^2.15.0"
evaluate = "^0.4.1"
accelerate = "^0.24.1"
optuna = "^3.4.0"
jupyterlab = "^4.0.9"
pylance = "^0.8.17"
ipykernel = "^6.27.1"
ipywidgets = "^8.1.1"
gradio = "^4.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
